--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 body{
 	padding:0;
 	margin:0;
@@ -95,7 +96,7 @@ a:hover {
 	top:0;
 	bottom:0;
 	width:400px;
-	height:400px;
+	height:450px;
 	margin:auto;
 	border-radius:5px;
 	border:solid 2px #666;
@@ -123,11 +124,20 @@ a:hover {
 	border-bottom:1px solid #ddd;
 	padding:12px;
 	position: relative;
+	background-color:#1A1A1A;
+}
+.theme-poptit h3{
+	color:white;
+}
+.theme-poptit1 h3{
+	color:white;
 }
 .theme-poptit1 {
 	border-bottom:1px solid #ddd;
 	padding:12px;
 	position: relative;
+	background-color:#1A1A1A;
+	color:white;
 }
 .theme-popbod {
 	padding:60px 15px;
@@ -295,8 +305,8 @@ i.googlepluse{
     text-decoration:none;
 }
 .banner-info {
-	width:93%;
-	margin:6em auto 0;
+	width:100%;
+	max-height:900px;
 }
 .header-bottom-grid1,.header-bottom-grid2,.header-bottom-grid3,.header-bottom-grid4{
 	width:23.5%;
@@ -423,9 +433,7 @@ span.glyphicon.glyphicon-hand-up,span.glyphicon.glyphicon-user,span.glyphicon.gl
 	text-transform: uppercase;
 	line-height: 1.4em;
 }
-.header-bottom-grids {
-	margin-top: 25.8em;
-}
+
 .secvice-top-grid-1,.secvice-top-grid-2,.secvice-top-grid-3,.secvice-top-grid-4{
 	width:23.5%;
 	float:left;
@@ -433,6 +441,7 @@ span.glyphicon.glyphicon-hand-up,span.glyphicon.glyphicon-user,span.glyphicon.gl
 	background:#fff;
 	padding: 3.3em 1.6em 5em 1.6em;
 	position:relative;
+	height:380px;
 }
 .secvice-top-grid-4{
 	margin-right:0;
@@ -449,10 +458,12 @@ span.glyphicon.glyphicon-hand-up,span.glyphicon.glyphicon-user,span.glyphicon.gl
 	margin-bottom: 12px;
 }
 .secvice-top-grid-1 p,.secvice-top-grid-2 p,.secvice-top-grid-3 p,.secvice-top-grid-4 p{
-	color: #7f9b9d;
+	color: #999999;
 	font-size: 1.1em;
 	font-weight: 300;
 	line-height:1.6em;
+	text-indent: 2em;
+	text-align:left;
 }
 i.icon1{
 	width:50px;
@@ -854,6 +865,13 @@ a.mask {
   display:block;
   text-decoration:none;
 }
+.news-grid{
+	height:520px;
+	margin-bottom:134px;
+}
+news-info a{
+	bottom:0;
+}
 a.button img {
 	width: 7%;
 	margin-top: 5px;
@@ -877,6 +895,7 @@ a.button img {
   font-weight: 300;
   margin-top:0.8em;
 }
+
 /*-- about-page-starts-here --*/
 .who_we_are,.latest-news {
 	padding: 4em 0;
@@ -1148,6 +1167,13 @@ a.button img {
 	margin: 0 0px 20px 0;
 	padding: 0;
 }
+.team h4{
+	color:#fff;
+	font-size:2em;
+	font-weight:300;
+	padding:0;
+	margin:10px 0 10px 10px;
+}
 /********* About ******/
 /*  GRID OF Content and sidebar   ============================================================================= */
 .section.group {
@@ -1190,6 +1216,21 @@ a.button img {
 }
 .span_1_of_3 {
 	width: 31%;
+}
+.teamcon{
+	margin:15px 0 0 0;
+}
+.teamcon p{
+	text-indent: 2em;
+	text-align:left;
+	line-height:1.8em;
+	font-size:1.3em;
+	font-weight:300;	
+}
+.teamtit{
+	background-color:gray;
+	padding:2px 0;
+	color:white;
 }
 .gallery-head {
 	  padding: 4em 0;
@@ -1661,6 +1702,27 @@ a.list-group-item:hover, a.list-group-item:focus {
   -webkit-transform: scale(0);
   transform: scale(0);
 }
+/*personpage*/
+.pshadow{
+	margin-top:3em;
+	margin-bottom:3em;
+	-moz-box-shadow: 2px 2px 10px #909090;/*firefox*/
+	-webkit-box-shadow: 2px 2px 10px #909090;/*safari或chrome*/
+	box-shadow:2px 2px 10px #909090;/*opera或ie9*/
+	padding:10px 20px;
+}
+.ptable{
+	font-size:1.6em;
+}
+.ptable1{
+	width:30%;
+	text-align:right;
+	padding:12px 24px;
+}
+.ptable2{
+	width:70%;
+	padding:12px 24px;
+}
 
 /* //Rectangle In */
 /*--//single-page--*/
@@ -1835,8 +1897,9 @@ h3.first {
 }
 .gin h3,.address h3,.dal h3 {
 	color: #fff;
-	font-size: 2em;
+	font-size: 1.3em;
 	text-transform: capitalize;
+	line-height:1.3;
 	font-weight: 500;
 	margin-bottom:0.8em;
 }
@@ -1934,11 +1997,16 @@ span.phone a:hover {
 span.menu {
 	display: none;
 }
+.table caption{
+	font-size:2em;
+	font-weight:300;
+}
+#actbm{
+	background-color:#CCCCCC;
+}
 /*-- responsine-design --*/
 @media screen and (max-width: 1440px) {	
-	.header-bottom-grids {
-		margin-top: 19.5em;
-	}
+
 	.header-banner {
 		min-height: 834px;
 	}
@@ -1948,12 +2016,9 @@ span.menu {
 }
 @media screen and (max-width: 1366px) {
 	.banner-info {
-		width: 93%;
-		margin: 5em auto 0;
+		width: 100%;
 	}
-	.header-bottom-grids {
-		margin-top: 17.2em;
-	}
+
 	.header-banner {
 		min-height: 790px;
 	}
@@ -1986,9 +2051,7 @@ span.menu {
 	.services-bottom-middle h3 {
 		font-size: 2.15em;
 	}
-	.banner-info {
-		margin: 4em auto 0;
-	}
+
 	.header-top {
 		padding: 1.6em 25px;
 	}
@@ -1998,9 +2061,7 @@ span.menu {
 	.banner-info h1 a {
 		font-size: 2.6em;
 	}
-	.header-bottom-grids {
-		margin-top: 16.2em;
-	}
+
 	.header-bottom-grid1, .header-bottom-grid2, .header-bottom-grid3, .header-bottom-grid4 {
 		padding: 2.5em 0px 3.5em 0;
 	}
@@ -2055,16 +2116,11 @@ span.menu {
 	.banner-info h1 a {
 		font-size: 2.3em;
 	}
-	.banner-info {
-		margin: 3.5em auto 0;
-	}
 	.header-bottom-grid1 h4, .header-bottom-grid2 h4, .header-bottom-grid3 h4, .header-bottom-grid4 h4 {
 		font-size: 1.8em;
 		margin-top: 0.5em;
 	}
-	.header-bottom-grids {
-		margin-top: 8.8em;
-	}
+
 	.header-banner {
 		min-height: 590px;
 	}
@@ -2157,7 +2213,6 @@ span.menu {
 	}
 
 	.banner-info {
-		margin: 2.5em auto 0;
 		width: 100%;
 	}
 	.banner-info h1 a {
@@ -2166,9 +2221,7 @@ span.menu {
 	.header-bottom-grids img {
 		width: 40%;
 	}
-	.header-bottom-grids {
-		margin-top: 6.5em;
-	}
+
 	.header-bottom-grid1 h4, .header-bottom-grid2 h4, .header-bottom-grid3 h4, .header-bottom-grid4 h4 {
 		font-size: 1.55em;
 		margin-top: 0em;
@@ -2458,7 +2511,6 @@ span.menu {
 	}
 
 	.banner-info {
-		margin: 2.5em auto 0;
 		width: 100%;
 	}
 	.banner-info h1 a {
@@ -2467,9 +2519,7 @@ span.menu {
 	.header-bottom-grids img {
 		width: 40%;
 	}
-	.header-bottom-grids {
-		margin-top: 6.5em;
-	}
+
 	.header-bottom-grid1 h4, .header-bottom-grid2 h4, .header-bottom-grid3 h4, .header-bottom-grid4 h4 {
 		font-size: 1.55em;
 		margin-top: 0em;
@@ -2765,8 +2815,7 @@ span.menu {
 		font-size: 1.55em;
 	}
 	.banner-info {
-		margin: 2em auto 0;
-		width: 90%;
+		width: 100%;
 	}
 	.header-bottom-grids img {
 		width: 35%;
@@ -2855,9 +2904,7 @@ span.menu {
 	.comments {
 		padding: 10px 0;
 	}
-	.header-bottom-grids {
-		margin-top: 4.9em;
-	}
+
 	span.glyphicon.glyphicon-home {
 		font-size: 19px;
 	}
@@ -2925,9 +2972,6 @@ span.menu {
 	}
 	.banner-info h1 a {
 		font-size: 1.35em;
-	}
-	.header-bottom-grids {
-		margin-top: 3em;
 	}
 	.header-bottom-grid1 h4, .header-bottom-grid2 h4, .header-bottom-grid3 h4, .header-bottom-grid4 h4 {
 		font-size: 0.95em;
@@ -3354,11 +3398,7 @@ span.menu {
 		font-size: 1.2em;
 	}
 	.banner-info {
-		margin: 1.3em auto 0;
 		width: 100%;
-	}
-	.header-bottom-grids {
-		margin-top: 2.85em;
 	}
 	.header-banner {
 		min-height: 250px;
