--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,9 @@ a {
 	text-decoration:none;
 	cursor:pointer
 }
+a, a:visited {
+    text-decoration: none;
+}
 a:hover {
 	color:#2A5E8E
 }
@@ -211,7 +214,161 @@ nav a {
 nav a:hover,
 nav a:focus {
 	outline: none;
-}/* Effect 13: three circles */
+}
+/*footer*/
+#footer {
+    overflow: hidden;
+    clear: both;
+    width: 100%;
+    margin: 0 auto;
+    padding: 50px 0 0 0;
+    font-size: 0.9166666666666667em;
+    color: #aaa;
+    background: url('../images/footer_top_bg.png') repeat-x left top #353535;
+    overflow: hidden;
+    position: relative;
+}
+#footer-bg {
+    background: url('../images/footer-bg.png') repeat left top;
+}
+#footer-inner {
+    max-width: 940px;
+    margin: 0 auto;
+    padding-bottom: 20px;
+    overflow: hidden;
+    position: relative;
+}
+#footer-inner .inner-block h3 {
+    color: #bebdbd;
+    font-size: 14px;
+    margin-bottom: 20px;
+    text-shadow: 1px 1px 0 #000;
+	margin:0;
+}
+#footer-inner .inner-block {
+    width: 22%;
+    height: 242px;
+    padding: 0 2%;
+    float: left;
+    background: url('../images/footer-line.png') repeat-y right top;
+    position: relative;
+    overflow: hidden;
+}
+#footer-inner .inner-block ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.wp-tag-cloud {
+    overflow: hidden;
+}
+.wp-tag-cloud li {
+    width: 100%!important;
+    float: left!important;
+    line-height: 20px!important;
+    height: 20px;
+}
+.wp-tag-cloud li a{
+	text-decoration: none;
+}
+
+.wp-tag-cloud li a:hover {
+	margin-left:5px;
+}
+
+#footer a {
+    color: #888;
+	text-decoration: none;
+	transition: all 0.26s ease-out 0s;
+}
+
+#footer a:hover{
+	color:#57B1ED !important;
+}
+
+#footer-inner .inner-block .inner-con {
+    font-size: 12px;
+    line-height: 1.68;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    color: #8a8a8a;
+}
+#footer-inner .inner-block {
+    width: 24%;
+    height: 242px;
+    padding: 0 2%;
+    float: left;
+    background: url('../images/footer-line.png') repeat-y right top;
+    position: relative;
+    overflow: hidden;
+}
+#footer-inner .inner-block .designer-recom a {
+    display: block;
+    float: left;
+    width: 53px;
+    height: 53px;
+    border: 5px solid #454545;
+    overflow: hidden;
+    margin: 0 5px 5px 0;
+    box-shadow: 0 0 1px #303030;
+    opacity: 0.7;
+}
+#footer-inner .inner-block .designer-recom img {
+    width: 53px;
+    opacity: 0.5;
+	vertical-align: middle;
+	border: 0;
+	transition: all 0.18s ease-out;
+}
+#footer-inner .inner-block .designer-recom img:hover{
+	opacity:1;
+}
+#footer-inner .first {
+    padding-left: 0;
+}
+#footer-inner .last {
+    padding-right: 0;
+    background: none;
+}
+#footer-bottom {
+    border-top: 1px solid #434343;
+    background: url('../images/footer_bottom_bg.png') repeat-x left bottom #000;
+    clear: both;
+}
+#footer-inner .weixinma {
+    width: 153px;
+    height: 180px;
+}
+#footer-inner .weixinma  img{
+    width:100%;
+}
+#footer-inner .weixinma p {
+    width: 180px;
+    text-align: center;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.nav-foot {
+    padding: 40px 0 0;
+}
+.nav-foot p.footer-links {
+    margin-bottom: 15px;
+}
+.nav-foot p, .nav-foot a {
+    color: #585858!important;
+    font-size: 12px;
+}
+.nav-foot a:hover{
+	color:#57B1ED;
+}
+p {
+    margin: 0 0 1.75em 0;
+}
+
+/* Effect 13: three circles */
 .cl-effect-13 a {
 	-webkit-transition: color 0.3s;
 	-moz-transition: color 0.3s;
@@ -306,7 +463,7 @@ i.googlepluse{
 }
 .banner-info {
 	width:100%;
-	max-height:900px;
+	max-height:460px;
 }
 .header-bottom-grid1,.header-bottom-grid2,.header-bottom-grid3,.header-bottom-grid4{
 	width:23.5%;
@@ -643,6 +800,7 @@ items h2{
 .copy-rights a:hover{
 	color:#fadb6f;
 }
+
 /* Header - Search ---------------------------------------------------------------------------------------------------*/
 .search-area-wrapper {
   background: #353b65 url("../images/main-bg.jpg") center top no-repeat;
@@ -713,6 +871,12 @@ p.search-tag-line {
     line-height: 36px;
     background-position: 0 6px;
 }
+.post-title a,.post-meta span a{
+	text-decoration:none;
+} 
+.post-title a:hover,.post-meta span a:hover{
+	text-shadow: 0 0 4px #CCCCCC, 0 0 8px #CCCCCC, 0 0 10px #CCCCCC, 0 0 30px #CCCCCC, 0 0 50px #CCCCCC;
+} 
 blockquote {
     background: whitesmoke url("../images/quote.png") no-repeat 20px 25px;
     border: 1px solid #e8e8e8;
@@ -1710,6 +1874,7 @@ a.list-group-item:hover, a.list-group-item:focus {
 	-webkit-box-shadow: 2px 2px 10px #909090;/*safari或chrome*/
 	box-shadow:2px 2px 10px #909090;/*opera或ie9*/
 	padding:10px 20px;
+	background-color:#fff;
 }
 .ptable{
 	font-size:1.6em;
@@ -1723,7 +1888,10 @@ a.list-group-item:hover, a.list-group-item:focus {
 	width:70%;
 	padding:12px 24px;
 }
-
+.pbadge img{
+	width:16%;
+	margin:5px 10px;
+}
 /* //Rectangle In */
 /*--//single-page--*/
 /************* Contact ********/
